# gfxreconstruct

./: ====README====DesignNotesOnSemaphoreExportHangs.txt  BUILD.md  CMakeLists.txt  README.md  USAGE_desktop_D3D12.md  USAGE_desktop_Vulkan.md
framework/decode/: CMakeLists.txt  api_decoder.h  string_decoder.h  vulkan_ascii_consumer_base.cpp  vulkan_ascii_consumer_base.h  vulkan_json_consumer_base.cpp  vulkan_json_consumer_base.h  vulkan_object_info.h  vulkan_replay_consumer_base.cpp  vulkan_replay_consumer_base.h  vulkan_replay_dump_resources.cpp  vulkan_replay_dump_resources_common.cpp  vulkan_replay_dump_resources_compute_ray_tracing.cpp  vulkan_replay_dump_resources_compute_ray_tracing.h  vulkan_replay_dump_resources_draw_calls.cpp  vulkan_replay_dump_resources_json.cpp  vulkan_replay_options.h  vulkan_replay_resource_dump.cpp  vulkan_replay_resource_dump.h  vulkan_replay_resource_dump_json.h
framework/encode/: capture_settings.cpp  capture_settings.h  parameter_encoder.h  trace_manager.cpp  trace_manager.h  vulkan_state_tracker_initializers.h  vulkan_state_writer.cpp
framework/graphics/: vulkan_resources_util.cpp  vulkan_resources_util.h
framework/util/: ascii_utils.h  json_utils.h  logging.cpp  logging.h  page_guard_manager.cpp
layer/: USAGE_android.md  USAGE_desktop.md  trace_layer.cpp
tools/: CMakeLists.txt  tool_settings.h
tools/gfxrecon/: gfxrecon.py
tools/info/: main.cpp
tools/replay/: CMakeLists.txt  desktop_main.cpp  (+2 more)
tools/tojson/: CMakeLists.txt  main.cpp
util/: CMakeLists.txt  defines.h  vma_memory_allocator.cpp  vma_memory_allocator.h
(+2 files in other folders)
